--- a/Groovy/Code/.gitignore
+++ b/Groovy/Code/.gitignore
@@ -8,3 +8,26 @@ build
 *.war
 *.ear
 hs_err_pid*
+*.iml
+.gradle
+/local.properties
+/.idea
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.idea
+build
+out
+*.apk
+*.ap_
+*.dex
+*.class
+bin/
+gen/
+local.properties
+repo/
+app/backup
+*.hprof
+.project
+.settings
