--- a/Java/00-Code/ASM-Base/build.gradle
+++ b/Java/00-Code/ASM-Base/build.gradle
@@ -7,7 +7,7 @@ allprojects {
         jcenter()
     }
 
-    apply plugin: 'idea'
+/*    apply plugin: 'idea'
 
     idea {
         module {
@@ -20,6 +20,6 @@ allprojects {
         // Change the output directory for the main and test source sets back to the old path
         sourceSets.main.output.classesDir = new File(buildDir, "classes/java/main")
         sourceSets.test.output.classesDir = new File(buildDir, "classes/java/test")
-    }
+    }*/
 }
 
