--- a/Android/00-Code/UISystem/RecyclerView/build.gradle
+++ b/Android/00-Code/UISystem/RecyclerView/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         google()
     }
     dependencies {
-      classpath 'com.android.tools.build:gradle:3.1.3'
+      classpath 'com.android.tools.build:gradle:3.5.0'
     }
 }
 
@@ -22,10 +22,10 @@ android {
     defaultConfig {
         applicationId "com.ztiany.recyclerview"
         minSdkVersion 15
-        targetSdkVersion 25
+        //noinspection OldTargetApi
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-
     }
 
     compileOptions {
