--- a/Network/00-Code/Imooc-Socket/Java-Socket/build.gradle
+++ b/Network/00-Code/Imooc-Socket/Java-Socket/build.gradle
@@ -14,7 +14,7 @@ repositories {
 sourceSets {
     main{
         java {
-            srcDir("src/main/l5")
+            srcDir("src/main/l7-clink")
         }
     }
 }
