--- a/Android/00-Code/UISystem/View/build.gradle
+++ b/Android/00-Code/UISystem/View/build.gradle
@@ -34,7 +34,7 @@ repositories {
     maven { url "https://kotlin.bintray.com/kotlinx" }
     jcenter()
     google()
-        mavenCentral()
+    mavenCentral()
 }
 
 android {
@@ -62,14 +62,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-dynamic-animation:27.1.1'//minsdk 16
     //https://github.com/Almeros/android-gesture-detectors
-    compile project(':android-gesture-detectors')
-    testCompile 'junit:junit:4.12'
+    //implementation 'com.github.Almeros:android-gesture-detectors:v1.0'
+    implementation project(":android-gesture-detectors")
 }
