--- a/Kotlin/Code/Kotlin-Coroutines/build.gradle
+++ b/Kotlin/Code/Kotlin-Coroutines/build.gradle
@@ -1,11 +1,20 @@
 buildscript {
 
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.50'
 
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/central/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url "https://maven.aliyun.com/repository/google" }
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
+        maven { url 'https://jitpack.io' }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
         jcenter()
         mavenCentral()
-        maven { url "https://kotlin.bintray.com/kotlinx" }
     }
     dependencies {
         //noinspection DifferentKotlinGradleVersion
@@ -19,9 +28,18 @@ apply plugin: 'java'
 apply plugin: 'kotlin'
 
 repositories {
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/central/' }
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'https://maven.aliyun.com/repository/central' }
+    maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+    maven { url 'https://maven.aliyun.com/repository/public' }
+    maven { url 'https://maven.aliyun.com/repository/jcenter' }
+    maven { url "https://maven.aliyun.com/repository/google" }
+    maven { url 'https://dl.google.com/dl/android/maven2/' }
+    maven { url 'https://jitpack.io' }
+    maven { url "https://kotlin.bintray.com/kotlinx" }
     jcenter()
     mavenCentral()
-    maven { url "https://kotlin.bintray.com/kotlinx" }
 }
 
 dependencies {
