--- a/Android/00-Code/.gitignore
+++ b/Android/00-Code/.gitignore
@@ -26,7 +26,7 @@ app/backup
 *.out
 *.aac
 *.txt
-
+.cxx
 
 # VisualStudio
 ## Ignore Visual Studio temporary files, build results, and
@@ -52,8 +52,6 @@ mono_crash.*
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-x64/
-x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
