--- a/C&CPP/00-Code/c-program-basic/CMakeLists.txt
+++ b/C&CPP/00-Code/c-program-basic/CMakeLists.txt
@@ -3,5 +3,5 @@ project(c-program)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES 07-Memory/Struct.c)
+set(SOURCE_FILES 07-Memory/BitFiled.c)
 add_executable(C_Program ${SOURCE_FILES})
