--- a/C&CPP/00-Code/cpp-program-basic/CMakeLists.txt
+++ b/C&CPP/00-Code/cpp-program-basic/CMakeLists.txt
@@ -3,5 +3,5 @@ project(cplusplus-program)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES 001-type/using_primary_t.cpp)
+set(SOURCE_FILES 02-strings/strings.cpp)
 add_executable(C__Basic ${SOURCE_FILES})
