--- a/C&CPP/00-Code/cpp-program-interact-with-c/CMakeLists.txt
+++ b/C&CPP/00-Code/cpp-program-interact-with-c/CMakeLists.txt
@@ -4,5 +4,5 @@ project(Interactor)
 set(CMAKE_CXX_STANDARD 11)
 
 #set(SOURCE_FILES c_cpp/main.c c_cpp/CppLibrary.cpp)
-set(SOURCE_FILES cpp_c/main.cpp cpp_c/CLibrary.c)
+set(SOURCE_FILES c_cpp/CppLibrary.cpp c_cpp/main.c)
 add_executable(Interactor ${SOURCE_FILES})
