--- a/C&CPP/00-Code/cpp-program-basic/CMakeLists.txt
+++ b/C&CPP/00-Code/cpp-program-basic/CMakeLists.txt
@@ -3,5 +3,5 @@ project(cplusplus-program)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES 10-io/03_string_io.cpp)
+set(SOURCE_FILES 16-advance/rtti.cpp)
 add_executable(C__Basic ${SOURCE_FILES})
