--- a/C&CPP/00-Code/cpp-program-basic/CMakeLists.txt
+++ b/C&CPP/00-Code/cpp-program-basic/CMakeLists.txt
@@ -3,5 +3,5 @@ project(cplusplus-program)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES 16-advance/rtti.cpp)
-add_executable(C__Basic ${SOURCE_FILES})
+set(SOURCE_FILES geektime/02-smart-ptr.cpp)
+add_executable(CPP_Basic ${SOURCE_FILES})
