--- a/C&CPP/00-Code/cpp-program-basic/CMakeLists.txt
+++ b/C&CPP/00-Code/cpp-program-basic/CMakeLists.txt
@@ -3,5 +3,8 @@ project(cplusplus-program)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES geektime/02-smart-ptr.cpp)
+#禁止编译器优化
+add_compile_options(-fno-elide-constructors)
+
+set(SOURCE_FILES 07-oop/move_constructor.cpp)
 add_executable(CPP_Basic ${SOURCE_FILES})
