--- a/Kotlin/Code/Kotlin-Coroutines/build.gradle
+++ b/Kotlin/Code/Kotlin-Coroutines/build.gradle
@@ -55,7 +55,12 @@ dependencies {
     //retrofit
     def retrofit_version = '2.7.1'
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "'com.squareup.retrofit2:retrofit-mock:$retrofit_version'"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    compile "'com.squareup.retrofit2:retrofit-mock:$retrofit_version'"
+    // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit-mock
+    compile group: 'com.squareup.retrofit2', name: 'retrofit-mock', version: '2.7.1'
+    //okhttp
+    compile "com.squareup.okhttp3:okhttp:4.3.1"
+    compile "com.squareup.okhttp3:mockwebserver:4.3.1"
 }
