--- a/Android/00-Code/NDK/Sample4/app/build.gradle
+++ b/Android/00-Code/NDK/Sample4/app/build.gradle
@@ -11,13 +11,20 @@ android {
         versionCode 1
         versionName "1.0"
 
+        //ndk build 方式开发
         externalNativeBuild {
             ndkBuild {
                 arguments "NDK_APPLICATION_MK:=src/main/jni/Application.mk"
                 cFlags "-DTEST_C_FLAG1", "-DTEST_C_FLAG2"
                 cppFlags "-DTEST_CPP_FLAG2", "-DTEST_CPP_FLAG2"
+                // 你希望编译你的 c/c++ 源文件 编译几种cpu(arm、x86 )
                 abiFilters "armeabi-v7a", "armeabi", "x86"
             }
+        }
+
+        //应该打包几种cpu
+        ndk{
+            abiFilters "armeabi-v7a"
         }
     }
 
@@ -27,6 +34,7 @@ android {
         }
     }
 
+    //配置 native 的编译脚本路径
     buildTypes {
         release {
             minifyEnabled false
