--- a/Flutter/Code/flutter_basic/pubspec.yaml
+++ b/Flutter/Code/flutter_basic/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   web_socket_channel: ^1.1.0
   # https://pub.dartlang.org/packages/english_words
   english_words: ^3.1.5
+  # https://pub.dev/packages/event_bus
+  event_bus: 1.1.0
 
 dev_dependencies:
   flutter_test:
