--- a/Flutter/Code/Hybrid/flutter_library/pubspec.yaml
+++ b/Flutter/Code/Hybrid/flutter_library/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_basic
-description: A new Flutter application for Flutter learning.
+name: flutter_library
+description: A new flutter module project.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -11,10 +11,14 @@ description: A new Flutter application for Flutter learning.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+#
+# This version is used _only_ for the Runner app, which is used if you just do
+# a `flutter run` or a `flutter make-host-app-editable`. It has no impact
+# on any other native host app that you embed your Flutter project into.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,49 +28,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  #  https://pub.dartlang.org/packages/transparent_image#-readme-tab-
-  # import 'package:transparent_image/transparent_image.dart';
-  transparent_image: ^1.0.0
-  # https://pub.dartlang.org/packages/cached_network_image#-readme-tab-
-  # import 'package:cached_network_image/cached_network_image.dart';
-  cached_network_image: ^2.0.0-rc.1
-  #  https://pub.dartlang.org/packages/http#-readme-tab-
-  http: ^0.12.0+4
-  # https://pub.dartlang.org/packages/web_socket_channel#-readme-tab-
-  web_socket_channel: ^1.1.0
-  # https://pub.dartlang.org/packages/english_words
-  english_words: ^3.1.5
-  # https://pub.dev/packages/event_bus
-  event_bus: 1.1.0
-  # https://pub.dev/packages/dio
-  dio: ^3.0.9
-  # https://pub.dev/packages/path_provider
-  # import 'package:path_provider/path_provider.dart';
-  path_provider: ^1.6.1
-  # https://pub.dev/packages/shared_preferences
-  # import 'package:shared_preferences/shared_preferences.dart';
-  shared_preferences: ^0.5.0
-  # https://pub.dev/packages/sqflite
-  # import 'package:sqflite/sqflite.dart';
-  sqflite: ^1.2.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # To add Flutter specific assets to your application, add an assets section, 
+  # like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
@@ -77,9 +53,9 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
+  # To add Flutter specific custom fonts to your application, add a fonts
+  # section here, in this "flutter" section. Each entry in this list should
+  # have a "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
@@ -96,6 +72,15 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-  assets:
-    - images/
-    - images/icon.png
+
+
+  # This section identifies your Flutter project as a module meant for
+  # embedding in a native host app.  These identifiers should _not_ ordinarily
+  # be changed after generation - they are used to ensure that the tooling can
+  # maintain consistency when adding or modifying assets and plugins.
+  # They also do not have any bearing on your native host application's
+  # identifiers, which may be completely independent or the same as these.
+  module:
+    androidX: true
+    androidPackage: com.example.flutter_library
+    iosBundleIdentifier: com.example.flutterLibrary
