--- a/Flutter/Code/flutter_basic/pubspec.yaml
+++ b/Flutter/Code/flutter_basic/pubspec.yaml
@@ -30,30 +30,37 @@ dependencies:
   # https://pub.dartlang.org/packages/cached_network_image#-readme-tab-
   # import 'package:cached_network_image/cached_network_image.dart';
   cached_network_image: ^2.0.0-rc.1
+
   #  https://pub.dartlang.org/packages/http#-readme-tab-
   http: ^0.12.0+4
-  # https://pub.dartlang.org/packages/web_socket_channel#-readme-tab-
-  web_socket_channel: ^1.1.0
-  # https://pub.dartlang.org/packages/english_words
-  english_words: ^3.1.5
-  # https://pub.dev/packages/event_bus
-  event_bus: 1.1.0
   # https://pub.dev/packages/dio
   dio: ^3.0.9
+  # https://pub.dartlang.org/packages/web_socket_channel#-readme-tab-
+  web_socket_channel: ^1.1.0
+
+  # https://pub.dartlang.org/packages/english_words
+  english_words: ^3.1.5
+
+  # https://pub.dev/packages/event_bus
+  event_bus: 1.1.0
+
   # https://pub.dev/packages/path_provider
   # import 'package:path_provider/path_provider.dart';
   path_provider: ^1.6.1
   # https://pub.dev/packages/shared_preferences
   # import 'package:shared_preferences/shared_preferences.dart';
-  shared_preferences: ^0.5.0
+  shared_preferences: ^0.5.6+2
   # https://pub.dev/packages/sqflite
   # import 'package:sqflite/sqflite.dart';
   sqflite: ^1.2.0
 
+  # https://pub.dev/packages/provider
+  # import 'package:provider/provider.dart';
+  provider: 3.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
