--- a/Flutter/Code/flutter_basic/pubspec.yaml
+++ b/Flutter/Code/flutter_basic/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # 用于支持国际化
   flutter_localizations:
     sdk: flutter
 
@@ -26,6 +27,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # 第三方插件
   #  https://pub.dartlang.org/packages/transparent_image#-readme-tab-
   # import 'package:transparent_image/transparent_image.dart';
   transparent_image: ^1.0.0
@@ -63,7 +65,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test:
+  # 引入mock测试模块
   mockito:
 
 # For information on the generic Dart part of this file, see the
