--- a/Java/Code/Java-Basic/build.gradle
+++ b/Java/Code/Java-Basic/build.gradle
@@ -6,6 +6,12 @@ subprojects {
 
     sourceCompatibility = 1.8
 
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << '-Xlint:unchecked'
+        //Gradle 编译 JAVA 文件时采用 UTF-8
+        options.encoding = "UTF-8"
+    }
+
     repositories {
         jcenter()
         mavenCentral()
