--- a/Android/Code/NDK/JNISample/app/CMakeLists.txt
+++ b/Android/Code/NDK/JNISample/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.4.1)
 
-add_library(native-lib SHARED src/main/cpp/native-lib.c src/main/cpp/Utils.c src/main/cpp/c_pthread.c)
+add_library(native-lib SHARED src/main/cpp/native-lib.c src/main/cpp/Utils.c src/main/cpp/c-pthread.c)
 
 include_directories(src/main/cpp)
 
