--- a/Back-end/Code/Spring-SSM-Base/P6-SpringMVC-MyBatis/src/main/resources/db.properties
+++ b/Back-end/Code/Spring-SSM-Base/P6-SpringMVC-MyBatis/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sqlbase?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/ssm_base?useSSL=false&serverTimezone=Asia/Shanghai
 jdbc.username=root
 jdbc.password=201314
