--- a/Back-end/Code/Spring-SSM-Base/settings.gradle
+++ b/Back-end/Code/Spring-SSM-Base/settings.gradle
@@ -5,4 +5,5 @@ include 'P3-SpringMVC-Base'
 include 'P4-SpringMVC-CRUD'
 include 'P5-Spring-SpringMVC'
 include 'P6-SpringMVC-MyBatis'
+include 'P7-SpringMVC-Annotation'
 
