--- a/Back-end/Code/SpringFramework4-Base/P1-GetStarted/src/test/resources/db.properties
+++ b/Back-end/Code/SpringFramework4-Base/P1-GetStarted/src/test/resources/db.properties
@@ -1,4 +1,4 @@
-jdbc.jdbcUrl=jdbc:mysql:///spring4_learning
+jdbc.jdbcUrl=jdbc:mysql:///spring4_learning?useSSL=false&serverTimezone=Asia/Shanghai
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.user=root
 jdbc.password=201314
