--- a/Back-end/Code/SpringFramework4-Base/P4-SpringJDBC/src/test/resources/db.properties
+++ b/Back-end/Code/SpringFramework4-Base/P4-SpringJDBC/src/test/resources/db.properties
@@ -1,6 +1,6 @@
 jdbc.user=root
 jdbc.password=201314
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql:///spring4_learning
+jdbc.jdbcUrl=jdbc:mysql:///spring4_learning?useSSL=false&serverTimezone=Asia/Shanghai
 jdbc.initPoolSize=5
 jdbc.maxPoolSize=10
