--- a/Back-end/Code/SpringFramework4-Base/settings.gradle
+++ b/Back-end/Code/SpringFramework4-Base/settings.gradle
@@ -1,6 +1,8 @@
 rootProject.name = 'SpringFramework4-Base'
+
 include 'P1-GetStarted'
 include 'P2-Beans'
 include 'P3-AOP'
 include 'P4-SpringJDBC'
+include 'P5-SpringAnnotation'
 
