--- a/Back-end/Code/JPA/JPA-Spring/build.gradle
+++ b/Back-end/Code/JPA/JPA-Spring/build.gradle
@@ -20,8 +20,9 @@ dependencies {
     compile springLibs.springJdbc
     compile springLibs.springTx
     compile springLibs.springORM
+
     //test
-    testCompile springLibs.springTest
+    testCompile testLibs.junit
 
     //database
     compile dataBaseLibs.mysqlConnector
