--- a/Back-end/Code/JPA/JPA-SpringData/build.gradle
+++ b/Back-end/Code/JPA/JPA-SpringData/build.gradle
@@ -11,5 +11,31 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    //Spring核心架构
+    //core
+    compile springLibs.springCore
+    compile springLibs.springBeans
+    compile springLibs.springExpression
+    compile springLibs.springContext
+    //aop
+    compile springLibs.springAop
+    compile springLibs.springAspects
+    compile springLibs.aspectJweaver
+    //database
+    compile springLibs.springJdbc
+    compile springLibs.springTx
+    compile springLibs.springORM
+    //data
+    compile springLibs.springDataCore
+    compile springLibs.springDataJPA
+
+    //test
+    testCompile testLibs.junit
+
+    //database
+    compile dataBaseLibs.mysqlConnector
+    compile dataBaseLibs.c3p0
+    compile dataBaseLibs.hibernate
+    compile dataBaseLibs.hibernateEhcache
+    compile dataBaseLibs.hibernateEntitymanager
 }
