--- a/Back-end/Code/config.gradle
+++ b/Back-end/Code/config.gradle
@@ -11,7 +11,8 @@ ext {
     ]
 
     /*Spring核心架构：https://mvnrepository.com/artifact/org.springframework*/
-    def springVersion = '4.3.17.RELEASE'
+    def springVersion = '5.2.0.RELEASE'
+    def springDataVersion = '2.2.0.RELEASE'
     springLibs = [
             //Spring的核心工具包
             // https://mvnrepository.com/artifact/org.springframework/spring-core
@@ -59,9 +60,14 @@ ext {
 
             //为简化JMS API的使用而作的简单封装
             // https://mvnrepository.com/artifact/org.springframework/spring-jms
-            springJms           : 'org.springframework:spring-jms:4.3.17.RELEASE',
+            springJms           : "org.springframework:spring-jms:${springVersion}",
             // https://mvnrepository.com/artifact/org.springframework/spring-messaging
-            springMessaging     : 'org.springframework:spring-messaging:4.3.17.RELEASE',
+            springMessaging     : "org.springframework:spring-messaging:${springVersion}",
+
+            // https://mvnrepository.com/artifact/org.springframework.data/spring-data-commons
+            springDataCore: "org.springframework.data:spring-data-commons:${springDataVersion}",
+            // https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa
+            springDataJPA: "org.springframework.data:spring-data-jpa:${springDataVersion}",
 
             /*Spring测试*/
             // https://mvnrepository.com/artifact/org.springframework/spring-test
@@ -119,16 +125,12 @@ ext {
     ]
 
     commonsLibs = [
-            //bean
-            // https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils
+            //commons
             beanUtils         : 'commons-beanutils:commons-beanutils:1.9.4',
-            //上传组件
             commonsIO         : 'commons-io:commons-io:2.6',
             commonsFileUpload : 'commons-fileupload:commons-fileupload:1.3.3',
             commonsCodec      : 'commons-codec:commons-codec:1.10',
-            //  string 增强
             commonsLang3      : 'org.apache.commons:commons-lang:3:4',
-            //  集合增强
             commonsCollections: 'commons-collections:commons-collections:3.2.1',
             //json
             gson              : 'com.google.code.gson:gson:2.7',
@@ -179,9 +181,9 @@ ext {
 
             //slf4j
             // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
-            slf4jApi      : 'org.slf4j:slf4j-api:1.7.24',
+            slf4jApi      : 'org.slf4j:slf4j-api:1.7.26',
             // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
-            slf4jLog4j12  : 'org.slf4j:slf4j-log4j12:1.7.24'
+            slf4jLog4j12  : 'org.slf4j:slf4j-log4j12:1.7.26'
     ]
 
 }
