--- a/Java/Code/Java-Concurrent/build.gradle
+++ b/Java/Code/Java-Concurrent/build.gradle
@@ -1,11 +1,19 @@
 subprojects {
-
     apply plugin: 'java'
     sourceCompatibility = 1.8
 
     repositories {
-        mavenCentral()
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/central/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url "https://maven.aliyun.com/repository/google" }
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
+        maven { url 'https://jitpack.io' }
+        maven { url "https://kotlin.bintray.com/kotlinx" }
         jcenter()
+        mavenCentral()
     }
-
 }
