--- a/Back-end/Code/config.gradle
+++ b/Back-end/Code/config.gradle
@@ -146,10 +146,10 @@ ext {
     ]
 
     shiro = [
-            shiroCore   : 'org.apache.shiro:shiro-core;1.3.2',
+            shiroCore   : 'org.apache.shiro:shiro-core:1.3.2',
             shiroWeb    : 'org.apache.shiro:shiro-web:1.3.2',
             shiroSpring : 'org.apache.shiro:shiro-spring:1.3.2',
-            shiroEhcache: 'org.apache.shiro : shiro-ehcache:1.3.2'
+            shiroEhcache: 'org.apache.shiro:shiro-ehcache:1.3.2'
     ]
 
     testLibs = [
