--- a/Android/Code/FFmpeg/DNFFmpegPlayer/app/build.gradle
+++ b/Android/Code/FFmpeg/DNFFmpegPlayer/app/build.gradle
@@ -4,7 +4,8 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.dongnao.player"
-        minSdkVersion 15
+        /*必须在 21 以上运行*/
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -33,15 +34,9 @@ android {
         }
     }
 
-    sourceSets {
-        main {
-            jniLibs.srcDirs += ['/src/main/cpp/libs']
-        }
-    }
-
     externalNativeBuild {
         cmake {
-            path "CMakeLists.txt"
+            path "src/main/cpp/CMakeLists.txt"
         }
     }
 
