--- a/Android/Code/FFmpeg/DNFFmpegPlayer/app/build.gradle
+++ b/Android/Code/FFmpeg/DNFFmpegPlayer/app/build.gradle
@@ -46,5 +46,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "io.reactivex.rxjava3:rxjava:3.0.3"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     testImplementation 'junit:junit:4.12'
 }
