--- a/Android/Code/FFmpeg/DNFFmpegPlayer/app/src/main/AndroidManifest.xml
+++ b/Android/Code/FFmpeg/DNFFmpegPlayer/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     package="com.dongnao.player">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".PlayActivity"
+            android:configChanges="orientation|screenLayout|screenSize|keyboardHidden"
+            android:theme="@style/PlayTheme" />
 
     </application>
 
